<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_pos_dashboard"
            android:icon="@mipmap/icons_location"
            android:title="@string/POS_DASHBOARD" />

        <item
            android:id="@+id/menu_pos_cart"
            android:icon="@mipmap/icon_cart"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/POS_TOTAL_CART" />

        <item
            android:id="@+id/menu_pos_explorer"
            android:icon="@mipmap/search_icon"
            android:title="@string/POS_EXPLORE" />
        <item
            android:id="@+id/menu_pos_account"
            android:icon="@mipmap/icon_account"
            android:title="@string/POS_ACCOUNT" />

    </group>


</menu>