<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >


    <LinearLayout
        android:id="@+id/dd"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.pikopako.AppUtill.CustomTextViewNormal
        android:id="@+id/textDialog"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/repeat_last_used_customization"
       />



    <com.pikopako.AppUtill.CustomTextViewNormal
        android:id="@+id/textDial"
        android:layout_width="match_parent"
        android:layout_marginTop="3dp"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center"
        android:text="@string/without_customization"
        />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/iid"
        android:layout_below="@+id/dd"
        android:orientation="horizontal"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:gravity="bottom"
        android:layout_marginEnd="@dimen/default_margen_screen"
        android:layout_marginStart="@dimen/default_margen_screen">

        <LinearLayout
            android:id="@+id/add_more_lyt"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/btnRepeatLast"
                android:textSize="12dp"
                android:text="@string/repeat_last"
                android:background="@drawable/login_drawable"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="40dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content">



            <Button
                android:id="@+id/btn_Choose"
                android:textSize="12dp"
                android:text="@string/i_ll_choose"
                android:background="@drawable/edittext_drawble"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        </LinearLayout>



    </LinearLayout>


    <LinearLayout
        android:layout_below="@+id/iid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:id="@+id/declineButton"
        android:textSize="12dp"
        android:text="@string/cancel"
        android:layout_margin="10dp"
        android:background="@drawable/edittext_drawble"
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_height="40dp" />
    </LinearLayout>
</RelativeLayout>