<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/toplinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include layout="@layout/custom_toolbar"/>

    <LinearLayout

        style="@style/VerticalLinearLayout"
        android:id="@+id/topPanel"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp">

        <com.pikopako.AppUtill.CustomTextInputLayout
            android:id="@+id/textinput"
            style="@style/TextInputLayoutStyle">

            <com.pikopako.AppUtill.CustomEditTextBold
                android:id="@+id/ed_old_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:importantForAutofill="noExcludeDescendants"
                android:hint="@string/oldpassword"/>

        </com.pikopako.AppUtill.CustomTextInputLayout>


        <com.pikopako.AppUtill.CustomTextInputLayout
            android:id="@+id/textinput_nae"
            style="@style/TextInputLayoutStyle">

            <com.pikopako.AppUtill.CustomEditTextBold
                android:id="@+id/ed_new_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:importantForAutofill="noExcludeDescendants"
                android:hint="@string/newpassword"/>

        </com.pikopako.AppUtill.CustomTextInputLayout>


        <com.pikopako.AppUtill.CustomTextInputLayout
            android:id="@+id/textinput_name"
            style="@style/TextInputLayoutStyle">

            <com.pikopako.AppUtill.CustomEditTextBold
                android:id="@+id/ed_cnfrm_password"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:importantForAutofill="noExcludeDescendants"
                android:hint="@string/cnfrmpass"/>

        </com.pikopako.AppUtill.CustomTextInputLayout>




    </LinearLayout>
        <Button
            android:textAllCaps="true"
            android:id="@+id/btnUpdate"
            android:layout_marginTop="30dp"
            android:text="@string/update"
            android:textSize="@dimen/default_button_size"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/login_drawable"
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>
</LinearLayout>